--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="text-lowercase btn btn-custom btn-main bbt" href="#">Simpl To-Do</a>
+              <a class="text-lowercase btn btn-custom btn-main" href="#">Simpl To-Do</a>
             </div>
             <div class="collapse navbar-collapse" id="page-navbar-collapse">
               <ul class="visible-xs-block list-unstyled">
@@ -35,8 +35,8 @@
               </ul>
               <ul class="hidden-xs hidden list-unstyled navbar-right">
                 <li class="dropdown">
-                  <a href="#" class="text-lowercase text-mono dropdown-toggle btn btn-custom bordered" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="signedIn">Signed In</a>
-                  <ul class="dropdown-menu">
+                  <a href="#" class="text-lowercase text-mono dropdown-toggle btn btn-custom bbt" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="signedIn">Signed In</a>
+                  <ul class="dropdown-menu flat">
                     <li>
                       <button type="submit" data-toggle="modal" role="button" data-target="#passwordModal" class="text-lowercase text-mono btn btn-custom bbt" id="password">Password</button>
                     </li>
@@ -52,14 +52,42 @@
         <section class="signed-out">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-xs-12">
-                <div class="intro page-content">
-                  <h2 class="text-strong text-sans">Create and update your to-do list.</h2>
-                  <p class="text-sans">Sign up or sign in to continue.</p>
-                </div>
-                <div class="page-forms">
-
-                </div>
+              <div class="col-md-8 col-md-offset-2">
+                <section class="intro">
+                  <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                      <div class="box flat">
+                        <div class="page-content">
+                          <p class="text-sans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni temporibus et quidem repellat quasi enim!</p>
+                          <p class="text-sans">Sign up or sign in to continue.</p>
+                        </div>
+                        <div class="page-forms">
+                          <!-- Sign Up -->
+                          <div class="sign-up">
+                            <form class="form" id="signUp">
+                              <div class="form-group">
+                                <label for="inputEmail1" class="text-uppercase text-mono control-label">Email</label>
+                                <input type="email" class="form-control" id="inputEmail1" name="credentials[email]" placeholder="Enter your email address" required>
+                              </div>
+                              <div class="form-group">
+                                <label for="inputPassword1" class="text-uppercase text-mono control-label">Password</label>
+                                <input type="password" class="form-control" id="inputPassword1" name="credentials[password]" placeholder="Enter your password" required>
+                              </div>
+                              <div class="form-group">
+                                <label for="inputPassword2" class="text-uppercase text-mono control-label">Password Confirmation</label>
+                                <input type="password" class="form-control" id="inputPassword2" name="credentials[password_confirmation]" placeholder="Confirm your password" required>
+                              </div>
+                              <div class="form-group">
+                                <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign Up</button>
+                              </div>
+                            </form>
+                            <small class="sign-up-cta">If you already have an account, sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </section>
               </div>
             </div>
           </div>
