Add HTML and CSS for Sign In

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </div>
                         <div class="page-forms">
                           <!-- Sign Up -->
-                          <div class="sign-up">
+                          <section class="hidden sign-up">
                             <form class="form" id="signUp">
                               <div class="form-group">
                                 <label for="inputEmail1" class="text-uppercase text-mono control-label">Email</label>
@@ -82,7 +82,24 @@
                               </div>
                             </form>
                             <small class="sign-up-cta">If you already have an account, sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
-                          </div>
+                          </section>
+                          <!-- Sign In -->
+                          <section class="sign-in">
+                            <form class="form" id="signIn">
+                              <div class="form-group">
+                                <label for="inputEmail2" class="text-uppercase text-mono control-label">Email</label>
+                                <input type="email" class="form-control" id="inputEmail2" name="credentials[email]" placeholder="Enter your email address" required>
+                              </div>
+                              <div class="form-group">
+                                <label for="inputPassword1" class="text-uppercase text-mono control-label">Password</label>
+                                <input type="password" class="form-control" id="inputPassword1" name="credentials[password]" placeholder="Enter your password" required>
+                              </div>
+                              <div class="form-group">
+                                <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign In</button>
+                              </div>
+                            </form>
+                            <small class="sign-up-cta">If you do not have an account, sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
+                          </section>
                         </div>
                       </div>
                     </div>
