Update header buttons styling

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <div class="collapse navbar-collapse" id="page-navbar-collapse">
               <ul class="hidden navbar-right list-inline signed-in">
                 <li>
-                  <button type="submit" data-toggle="modal" role="button" data-target="#passwordModal" class="text-lowercase text-mono btn btn-custom bbt" id="password">Password</button>
+                  <button type="submit" data-toggle="modal" role="button" data-target="#passwordModal" class="text-lowercase text-mono btn btn-default btn-custom" id="password">Password</button>
                 </li>
                 <li>
-                  <button type="submit" role="button" class="text-lowercase text-mono btn btn-custom bbt" id="signOut">Sign Out</button>
+                  <button type="submit" role="button" class="text-lowercase text-mono btn btn-default btn-custom" id="signOut">Sign Out</button>
                 </li>
               </ul>
             </div>
