Create Handlebars templates for Sign Up and Sign In

--- a/index.html
+++ b/index.html
@@ -77,47 +77,18 @@
                         <div class="page-content">
                           <p class="text-sans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni temporibus et quidem repellat quasi enim!</p>
                           <p class="text-sans">Sign up or sign in to continue.</p>
+                          <p class="message"></p>
                         </div>
                         <div class="page-forms">
                           <!-- Sign Up -->
                           <section class="sign-up">
-                            <p class="message"></p>
-                            <form class="form" id="signUp">
-                              <div class="form-group">
-                                <label for="inputEmail1" class="text-uppercase text-mono control-label">Email</label>
-                                <input type="email" class="form-control" id="inputEmail1" name="credentials[email]" placeholder="Enter your email address" required>
-                              </div>
-                              <div class="form-group">
-                                <label for="inputPassword1" class="text-uppercase text-mono control-label">Password</label>
-                                <input type="password" class="form-control" id="inputPassword1" name="credentials[password]" placeholder="Enter your password" required>
-                              </div>
-                              <div class="form-group">
-                                <label for="inputPassword2" class="text-uppercase text-mono control-label">Password Confirmation</label>
-                                <input type="password" class="form-control" id="inputPassword2" name="credentials[password_confirmation]" placeholder="Confirm your password" required>
-                              </div>
-                              <div class="form-group">
-                                <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign Up</button>
-                              </div>
-                            </form>
-                            <small class="sign-up-cta">If you already have an account, sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
+                            <div class="form-template"></div>
+                            <small>If you already have an account, sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
                           </section>
                           <!-- Sign In -->
                           <section class="sign-in">
-                            <p class="message"></p>
-                            <form class="form" id="signIn">
-                              <div class="form-group">
-                                <label for="inputEmail2" class="text-uppercase text-mono control-label">Email</label>
-                                <input type="email" class="form-control" id="inputEmail2" name="credentials[email]" placeholder="Enter your email address" required>
-                              </div>
-                              <div class="form-group">
-                                <label for="inputPassword3" class="text-uppercase text-mono control-label">Password</label>
-                                <input type="password" class="form-control" id="inputPassword3" name="credentials[password]" placeholder="Enter your password" required>
-                              </div>
-                              <div class="form-group">
-                                <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign In</button>
-                              </div>
-                            </form>
-                            <small class="sign-up-cta">If you do not have an account, sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
+                            <div class="form-template"></div>
+                            <small>If you do not have an account, sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
                           </section>
                         </div>
                       </div>
