Update UI and footer

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
         </section>
         <section class="welcome">
-          <div class="container-fluid">
+          <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
                 <section class="intro">
@@ -83,12 +83,12 @@
                           <!-- Sign Up -->
                           <section class="sign-up">
                             <div class="form-template"></div>
-                            <small>If you already have an account, sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
+                            <small>If you already have an account, <br class="visible-xs-block"> sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
                           </section>
                           <!-- Sign In -->
                           <section class="sign-in">
                             <div class="form-template"></div>
-                            <small>If you do not have an account, sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
+                            <small>If you do not have an account, <br class="visible-xs-block"> sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
                           </section>
                         </div>
                       </div>
@@ -125,7 +125,7 @@
           <div class="container-fluid footer-container text-right">
             <div class="row">
               <div class="col-xs-12">
-                <p class="footer-text">Created by <a class="text-mono btn btn-custom bbt" href="https://github.com/lydivetteroldan" target="_blank">Lydivette Roldán</a></p>
+                <small class="footer-text">made by <a class="text-mono btn btn-custom bbt" href="https://github.com/lydivetteroldan" target="_blank">Lydivette Roldán</a></small>
               </div>
             </div>
           </div>
