--- a/index.html
+++ b/index.html
@@ -74,19 +74,20 @@
                   <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                       <div class="box">
-                        <div class="page-content">
-                          <p class="text-sans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni temporibus et quidem repellat quasi enim!</p>
-                          <p class="text-sans">Sign up or sign in to continue.</p>
-                          <p class="message"></p>
-                        </div>
+                        <p class="text-sans intro-text"><span class="text-lowercase text-sans text-strong">Simpl To-Do</span> provides you a basic way to create and update your to-do list.</p>
+                        <p class="message"></p>
+                      </div>
+                      <div class="box">
                         <div class="page-forms">
                           <!-- Sign Up -->
                           <section class="sign-up">
+                            <h3 class="text-sans text-strong h3">Sign Up <br><small>Please sign up to create a free account.</small></h3>
                             <div class="form-template"></div>
                             <small>If you already have an account, <br class="visible-xs-block"> sign in <button type="submit" class="btn btn-custom bbt" id="signInButton">here</button>.</small>
                           </section>
                           <!-- Sign In -->
                           <section class="sign-in">
+                            <h3 class="text-sans text-strong h3">Sign In<br> <small>Please sign in to continue.</small></h3>
                             <div class="form-template"></div>
                             <small>If you do not have an account, <br class="visible-xs-block"> sign up <button type="submit" class="btn btn-custom bbt" id="signUpButton">here</button>.</small>
                           </section>
@@ -105,17 +106,17 @@
               <div class="col-xs-6">
                 <section class="intro">
                   <div class="box">
-                    <p class="text-sans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni temporibus et quidem repellat quasi enim!</p>
+                    <p class="text-sans intro-text"><span class="text-lowercase text-sans text-strong">Simpl To-Do</span> provides you a basic way to create and update your to-do list.</p>
                     <p class="message"></p>
                   </div>
                 </section>
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-6">
+              <div class="col-md-6">
                 <div class="page-content"></div>
               </div>
-              <div class="col-xs-6">
+              <div class="col-md-6">
                 <div class="page-forms"></div>
               </div>
             </div>
@@ -124,7 +125,7 @@
         <footer class="footer">
           <div class="container-fluid footer-container text-right">
             <div class="row">
-              <div class="col-xs-12">
+              <div class="col-md-12">
                 <small class="footer-text">made by <a class="text-mono btn btn-custom bbt" href="https://github.com/lydivetteroldan" target="_blank">Lydivette Roldán</a></small>
               </div>
             </div>
